# organizational-workflows

./: .coverage  .gitignore  .pylintrc  CONTRIBUTING.md  DEVELOPERS.md  Makefile  PROPOSAL.md  README.md  alerts_aul.json  alerts_local.json  pyproject.toml  requirements.txt
.github/: copilot-instructions.md  dependabot.yml
.github/workflows/: aquasec-branch-comparison.yml  aquasec-night-scan.yml  aquasec-remove-label.yml  aquasec-scan.yml  check_pr_release_notes.yml  check_python.yml  release_draft.yml  remove-adept-to-close-on-issue-close.yml  remove-resolved-finding-label.yml  test.yml
docs/: security.md
docs/security/: aquasec-night-scan-example.yml  security.md
github/security/: DEVELOPERS.md  README.md  check_labels.py  check_labels.sh  collect_alert.sh  derive_team_security_metrics.py  extract_team_security_stats.py  labels.yml  process_sec_events.py  promote_alerts.py  pyproject.toml  requirements-dev.txt  requirements.txt  run-all.sh  send_to_teams.py  sync_issue_labels.py  sync_security_alerts.sh
github/shared/: __init__.py  common.py  github_issues.py  github_projects.py  models.py  templates.py
scripts/: sync_project_priorities.py
scripts/security/: sync_project_priorities.py
security/: collect_alert.sh  extract_team_security_stats.py  promote_alerts.py  send_to_teams.py
security/utils/: __init__.py  issue_builder.py
security/workflows/: remove-adept-to-close-on-issue-close.yml
shared/: models.py
src/core/: __init__.py  config.py  helpers.py  priority.py  rendering.py
src/security/: README.md  __init__.py  alerts.json  alerts_aul.json  (+13 more)
(+103 files in other folders)
